@@ -2,7 +2,7 @@ AC_INIT(README)
 
 AM_CONFIG_HEADER(config.h)
 
-AM_INIT_AUTOMAKE(giv, 0.3.2)
+AM_INIT_AUTOMAKE(giv, 0.3.3)
 
 AM_MAINTAINER_MODE
 
